Updates and ready to deploy

--- a/src/components/Blogsection.astro
+++ b/src/components/Blogsection.astro
@@ -18,14 +18,13 @@ publishedBlogEntries.sort(function (a, b) {
       <div class="w-full px-4">
         <div class="mx-auto mb-[60px] max-w-[485px] text-center">
           <span class="block mb-2 text-lg font-semibold text-primary">
-            Our Blogs
+            Hammerfist Blogs
           </span>
           <h2 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]">
-            Our Recent News
+            Thoughts on Tech
           </h2>
           <p class="text-base text-body-color dark:text-dark-6">
-            There are many variations of passages of Lorem Ipsum available
-            but the majority have suffered alteration in some form.
+            There are many tech options for building digital products. Here are our top picks and the ones we’d avoid. Check it out!
           </p>
         </div>
       </div>
