--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -135,7 +135,7 @@ const { Content } = await entry.render();
                 >
                   {entry.data.postDetails.paraThree}
                 </p>
-                <div
+                <!-- <div
                   class="wow fadeInUp relative z-10 mb-10 overflow-hidden rounded-[5px] bg-primary/5 py-8 px-6 text-center sm:p-10 md:px-[60px]"
                   data-wow-delay=".1s"
                 >
@@ -187,7 +187,7 @@ const { Content } = await entry.render();
                       </svg>
                     </span>
                   </div>
-                </div>
+                </div> -->
 
                 <h3
                   class="wow fadeInUp mb-6 text-2xl font-semibold text-dark dark:text-white sm:leading-[40px] sm:text-[28px]"
