--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,13 +19,13 @@ import Blogsection from '../components/Blogsection.astro';
 >
   <Hero />
   <!-- <Testimonials /> -->
-  <!-- <Features /> -->
   <About />
+  <Features />
   <!-- <CTA /> -->
   <!-- <Pricing /> -->
-  <Faq />
   <Team />
-  <Blogsection />
+  <!-- <Blogsection /> -->
+  <Faq />
   <Contact />
   <!-- <Clients /> -->
 </Layout>
