--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,11 +21,11 @@ import Blogsection from '../components/Blogsection.astro';
   <!-- <Testimonials /> -->
   <!-- <Features /> -->
   <About />
-  <!-- <CTA /> -->
   <!-- <Pricing /> -->
   <Faq />
   <Team />
-  <Blogsection />
+  <!-- <Blogsection /> -->
+  <CTA />
   <Contact />
   <!-- <Clients /> -->
 </Layout>
