--- a/src/components/CTAsection.astro
+++ b/src/components/CTAsection.astro
@@ -6,16 +6,15 @@
         <div class="w-full px-4">
           <div class="mx-auto max-w-[570px] text-center">
             <h2 class="mb-2.5 text-3xl font-bold md:leading-[1.44] text-white md:text-[38px]">
-              <span>What Are You Looking For?</span>
-              <span class="font-normal text-3xl md:text-[40px]"> Get Started Now </span>
+              <span>What are you hoping to build?</span>
+              <span class="font-normal text-3xl md:text-[40px]"> Let start on it today! </span>
             </h2>
             <p class="mb-6 mx-auto max-w-[515px] text-base leading-[1.5] text-white">
-              There are many variations of passages of Lorem Ipsum but the
-              majority have suffered in some form.
+              We've helped people just like you build their digital product. We can't wait to work with you!
             </p>
-            <a href="javascript:void(0)"
+            <a href="/#contact"
               class="inline-block py-3 text-base font-medium text-white transition border border-transparent rounded-md bg-secondary px-7 hover:bg-blue-dark hover:border-white">
-              Start using Play
+              Get started today
             </a>
           </div>
         </div>
