--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -55,7 +55,7 @@ const footerLinks = [
 
       <div class="w-full px-4 md:w-2/3 lg:w-6/12 xl:w-3/12">
         <div class="mb-10 w-full">
-          <h4 class="mb-9 text-lg font-semibold text-white">{footerLinks[0].header}</h4>
+          <!-- <h4 class="mb-9 text-lg font-semibold text-white">{footerLinks[0].header}</h4>
           <ul class="flex flex-col gap-8">
             {
               publishedBlogEntries.slice(0, 2).map((blogPostEntry, index) => (
@@ -74,7 +74,7 @@ const footerLinks = [
                 </li>
               ))
             }
-          </ul>
+          </ul> -->
         </div>
       </div>
     </div>
