--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,19 +20,12 @@ import Blogsection from '../components/Blogsection.astro';
   <Hero />
   <!-- <Testimonials /> -->
   <About />
-<<<<<<< HEAD
-=======
-  <Features />
-  <!-- <CTA /> -->
->>>>>>> e6dd698b858912d91cc5edde3ba629fbb73182b3
+  <!-- <Features /> -->
+  <CTA />
   <!-- <Pricing /> -->
   <Team />
   <!-- <Blogsection /> -->
-<<<<<<< HEAD
-  <CTA />
-=======
   <Faq />
->>>>>>> e6dd698b858912d91cc5edde3ba629fbb73182b3
   <Contact />
   <!-- <Clients /> -->
 </Layout>
