feat(web): add email worker and resend

--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -42,7 +42,7 @@ const faqs = [
             Any Questions? Look Here
           </h2>
           <p class="mx-auto max-w-[485px] text-base text-body-color dark:text-dark-6">
-            We've compiled answers to some of the most common questions about Hammerfist Studio, LLC. If you don't find the information you're looking for, please feel free to contact us directly.
+            We've compiled answers to some of the most common questions about Hammerfist Studio. If you don't find the information you're looking for, please feel free to contact us directly.
           </p>
         </div>
       </div>
