--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,8 +14,8 @@ import Blogsection from '../components/Blogsection.astro';
 ---
 
 <Layout
-  description="Hammerfist Studio, LLC: Empowering small businesses with innovative software solutions"
-  title="Hammerfist Studio, LLC"
+  description="Hammerfist Studio: Empowering small businesses with innovative software solutions"
+  title="Hammerfist Studio"
 >
   <Hero />
   <!-- <Testimonials /> -->
