--- a/src/components/Contactsection.astro
+++ b/src/components/Contactsection.astro
@@ -1,4 +1,36 @@
 <!-- ====== Contact Start ====== -->
+---
+export const prerender = false;
+
+type formData = {
+  name: string;
+  email: string;
+  phone: string,
+  message: string;
+};
+
+if (Astro.request.method === "POST") {
+  try {
+    const formData = await Astro.request.formData();
+    // Astro requires an absolute URL, which is why you should use Astro.url + "/api/sendEmail.json. 
+    // If you use a relative path the post request will fail.
+    const response = await fetch(Astro.url + "/api/sendEmail.json", {
+      method: "POST",
+      body: formData,
+    });
+
+    const data: formData = await response.json();
+
+    if (response.status === 200) {
+      console.log(data.message);
+    }
+  } catch (error) {
+    if (error instanceof Error) {
+      console.error(`Error: ${error.message}`);
+    }
+  }
+}
+---
 <section id="contact" class="relative py-20 md:py-[120px]">
   <div class="absolute top-0 left-0 -z-[1] w-full dark:bg-dark h-full"></div>
   <div class="absolute top-0 left-0 -z-[1] h-1/2 w-full bg-secondary dark:bg-dark-700 lg:h-[45%] xl:h-1/2"></div>
@@ -54,25 +86,25 @@
           <h3 class="mb-8 text-2xl font-semibold md:text-[28px] md:leading-[1.42] text-dark dark:text-white">
             Send us a Message
           </h3>
-          <form>
+          <form method="POST">
             <div class="mb-[22px]">
-              <label for="fullName" class="block text-sm text-body-color dark:text-dark-6 mb-4">Full Name*</label>
-              <input type="text" name="fullName" placeholder="Charels Barkley"
+              <label for="name" class="block text-sm text-body-color dark:text-dark-6 mb-4">Full Name*</label>
+              <input type="text" name="name" id="name" required placeholder="Charles Barkley"
                 class="bg-transparent w-full text-body-color dark:text-dark-6 placeholder:text-body-color/60 border-0 border-b border-[#f1f1f1] dark:border-dark-3 pb-3 focus:border-primary focus:outline-none" />
             </div>
             <div class="mb-[22px]">
               <label for="email" class="block text-sm text-body-color dark:text-dark-6 mb-4">Email*</label>
-              <input type="email" name="email" placeholder="email@domain.com"
+              <input type="email" name="email" id="email" required placeholder="email@domain.com"
                 class="bg-transparent w-full text-body-color dark:text-dark-6 placeholder:text-body-color/60 border-0 border-b border-[#f1f1f1] dark:border-dark-3 pb-3 focus:border-primary focus:outline-none" />
             </div>
             <div class="mb-[22px]">
               <label for="phone" class="block text-sm text-body-color dark:text-dark-6 mb-4">Phone*</label>
-              <input type="text" name="phone" placeholder="33344455555"
+              <input type="text" name="phone" id="phone" placeholder="33344455555"
                 class="bg-transparent w-full text-body-color dark:text-dark-6 placeholder:text-body-color/60 border-0 border-b border-[#f1f1f1] dark:border-dark-3 pb-3 focus:border-primary focus:outline-none" />
             </div>
             <div class="mb-[30px]">
               <label for="message" class="block text-sm text-body-color dark:text-dark-6 mb-4">Message*</label>
-              <textarea name="message" rows="1" placeholder="How can we help you?"
+              <textarea name="message" id="message" required rows="4" placeholder="How can we help you?"
                 class="bg-transparent w-full text-body-color dark:text-dark-6 placeholder:text-body-color/60 resize-none border-0 border-b border-[#f1f1f1] dark:border-dark-3 pb-3 focus:border-primary focus:outline-none"></textarea>
             </div>
             <div class="mb-0">
